--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -2,9 +2,11 @@
 <html>
   <head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/css/style.css' />
+    
+    <link href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
+
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
   </body>
