--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,9 @@
   </head>
   <body>
     <h1><%= title %></h1>
+    <h2>women</h2>
+    <h1>women</h1>
+    
     <p>Welcome to <%= title %></p>
   </body>
 </html>
