add uikit components

--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -1,13 +1,20 @@
+
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    
-    <link href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-  </head>
-  <body>
+    <head>
+        <meta charset="utf-8">
+        <title></title>
+        <link rel="stylesheet" href="src/uikit/css/uikit.min.css">
 
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+    </head>
+    <body>
+        <div class="head">
+          <div class="">
+
+          </div>
+        </div>
+        <div class="slideMenu">
+
+      </div>
+    </body>
 </html>
