--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,13 +2,14 @@
 <html>
   <head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/css/style.css' />
+    <link rel="stylesheet" href="src/uikit/css/uikit.min.css">
   </head>
   <body>
     <h1><%= title %></h1>
     <h2>women</h2>
     <h1>women</h1>
-    
+
     <p>Welcome to <%= title %></p>
+    <input type="button" name="" value="按钮" class="uk-button uk-button-primary uk-button-large">
   </body>
 </html>
