--- a/public/src/uikit/css/uikit.css
+++ b/public/src/uikit/css/uikit.css
@@ -1722,7 +1722,7 @@ iframe {
   text-decoration: none;
 }
 .uk-nav > li > a {
-  padding: 5px 15px;
+  padding: 10px 25px;
 }
 /*
  * Nested items
@@ -1731,7 +1731,7 @@ iframe {
   padding-left: 15px;
 }
 .uk-nav ul a {
-  padding: 2px 0;
+  padding: 2px 5px;
 }
 /*
  * Item subtitle
@@ -1743,7 +1743,7 @@ iframe {
 /* Sub-object: `uk-nav-header`
  ========================================================================== */
 .uk-nav-header {
-  padding: 5px 15px;
+  padding: 10px 25px;
   text-transform: uppercase;
   font-weight: bold;
   font-size: 12px;
@@ -1754,7 +1754,7 @@ iframe {
 /* Sub-object: `uk-nav-divider`
  ========================================================================== */
 .uk-nav-divider {
-  margin: 9px 15px;
+  margin: 9px 25px;
 }
 /* Sub-object: `uk-nav-sub`
  ========================================================================== */
@@ -1762,7 +1762,10 @@ iframe {
  * `ul` needed for higher specificity to override padding
  */
 ul.uk-nav-sub {
-  padding: 5px 0 5px 15px;
+  padding: 5px 0 5px 25px;
+  border-top: 1px solid rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.05);
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);
 }
 /* Modifier: `uk-nav-parent-icon`
  ========================================================================== */
@@ -1783,7 +1786,14 @@ ul.uk-nav-sub {
  * Items
  */
 .uk-nav-side > li > a {
-  color: #444;
+  color: #ccc;
+  padding: 10px 15px;
+  border-top: 1px solid rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.05);
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);
+}
+.uk-nav-side {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
 }
 /*
  * Hover
@@ -1792,15 +1802,16 @@ ul.uk-nav-sub {
  */
 .uk-nav-side > li > a:hover,
 .uk-nav-side > li > a:focus {
-  background: rgba(0, 0, 0, 0.05);
-  color: #444;
+  background: #404040;
+  color: #fff;
   /* 2 */
   outline: none;
 }
 /* Active */
 .uk-nav-side > li.uk-active > a {
-  background: #00a8e6;
+  background: #1a1a1a;
   color: #fff;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3);
 }
 /*
  * Sub-object: `uk-nav-header`
