--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -16,14 +16,14 @@
         </div>
         <div class="ib-side-menu">
             <ul class="uk-nav uk-nav-side uk-nav-parent-icon" data-uk-nav>
-                <li class="uk-active">
-                    <a href="#">菜单一</a>
+                <li class="">
+                    <a href="#">用户中心</a>
                 </li>
                 <li>
-                    <a href="#">菜单一</a>
+                    <a href="#">SEO优化</a>
                 </li>
                 <li class="uk-parent">
-                    <a href="#">菜单一</a>
+                    <a href="#">新闻管理</a>
                     <!-- <div class=""> -->
                     <ul class="uk-nav-sub">
                         <li>
@@ -36,13 +36,23 @@
                     <!-- </div> -->
                 </li>
                 <li class="uk-active">
-                    <a href="#">菜单一</a>
+                    <a href="#">应用下载</a>
                 </li>
                 <li>
-                    <a href="#">菜单一</a>
+                    <a href="#">招聘信息</a>
                 </li>
-                <li>
-                    <a href="#">菜单一</a>
+                <li class="uk-parent">
+                    <a href="#">首页设置</a>
+                    <!-- <div class=""> -->
+                    <ul class="uk-nav-sub">
+                        <li>
+                            <a href="#">二级菜单</a>
+                        </li>
+                        <li>
+                            <a href="#">二级菜单</a>
+                        </li>
+                    </ul>
+                    <!-- </div> -->
                 </li>
             </ul>
         </div>
