--- a/public/src/less/public.less
+++ b/public/src/less/public.less
@@ -10,9 +10,23 @@ html,body{
 .ib-head{
     background-color:@ib-head-backgroundcolor;
     height:@ib-head-height;
+    position:relative;
     // border-bottom-width:1px;
     // border-bottom-style:solid;
     // border-bottom-color:@ib-head-border-bottom-color;
+}
+.ib-head-logo{
+    width:@ib-head-logo-width;
+    padding-top:5px;
+    padding-left:7px;
+    display:inline-block;
+    vertical-align: middle;
+}
+.ib-head-title{
+    color:white;
+    font-size:30px;
+    display:inline-block;
+    vertical-align: middle;
 }
 
 /*菜单栏 侧边栏*/
