--- a/public/src/less/publicVariables.less
+++ b/public/src/less/publicVariables.less
@@ -7,3 +7,5 @@
 @ib-head-backgroundcolor:           #252525;  //头部背景颜色
 @ib-head-height:                    70px;     //头部的高度
 @ib-head-border-bottom-color:       #ccc;     //头部底部边框的颜色
+
+@ib-head-logo-width:                180px;    //头部logo宽度
