--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -12,7 +12,12 @@
     </head>
     <body>
         <div class="ib-head">
-
+            <div class="ib-head-logo">
+                <img src="../src/img/logo.png" alt="">
+            </div>
+            <div class="ib-head-title">
+                后台管理
+            </div>
         </div>
         <div class="ib-side-menu">
             <ul class="uk-nav uk-nav-side uk-nav-parent-icon" data-uk-nav>
