--- a/public/src/less/publicVariables.less
+++ b/public/src/less/publicVariables.less
@@ -4,8 +4,20 @@
 @ib-side-menu-backgroundcolor:      #333;   //侧边栏的背景颜色
 
 
+// 头部信息 样式
 @ib-head-backgroundcolor:           #252525;  //头部背景颜色
 @ib-head-height:                    70px;     //头部的高度
 @ib-head-border-bottom-color:       #ccc;     //头部底部边框的颜色
 
 @ib-head-logo-width:                180px;    //头部logo宽度
+
+@ib-head-user-tab-color:            #fff;     //用户：这两个字的颜色
+@ib-head-user-name-color:           #ff6a00;  //用户名的颜色
+@ib-head-user-exit-color:           #ff6a00;  //注销按钮的颜色
+
+@ib-head-user-bottom:               5px;      //距离底部的距离
+@ib-head-user-right:                100px;    //距离右边的距离
+
+@ib-head-user-exit-left:            30px;     //注销按钮距离左边的距离
+
+@ib-head-user-fontsize:             16px;     //字体的大小
