--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -18,6 +18,11 @@
             <div class="ib-head-title">
                 后台管理
             </div>
+            <div class="ib-head-user">
+                <span>用户：</span>
+                <a class="ib-head-user-info">admin</a>
+                <a class="ib-head-user-exit" href="#">注销</a>
+            </div>
         </div>
         <div class="ib-side-menu">
             <ul class="uk-nav uk-nav-side uk-nav-parent-icon" data-uk-nav>
@@ -27,18 +32,8 @@
                 <li>
                     <a href="#">SEO优化</a>
                 </li>
-                <li class="uk-parent">
+                <li class="">
                     <a href="#">新闻管理</a>
-                    <!-- <div class=""> -->
-                    <ul class="uk-nav-sub">
-                        <li>
-                            <a href="#">二级菜单</a>
-                        </li>
-                        <li>
-                            <a href="#">二级菜单</a>
-                        </li>
-                    </ul>
-                    <!-- </div> -->
                 </li>
                 <li class="uk-active">
                     <a href="#">应用下载</a>
@@ -46,18 +41,8 @@
                 <li>
                     <a href="#">招聘信息</a>
                 </li>
-                <li class="uk-parent">
+                <li class="">
                     <a href="#">首页设置</a>
-                    <!-- <div class=""> -->
-                    <ul class="uk-nav-sub">
-                        <li>
-                            <a href="#">二级菜单</a>
-                        </li>
-                        <li>
-                            <a href="#">二级菜单</a>
-                        </li>
-                    </ul>
-                    <!-- </div> -->
                 </li>
             </ul>
         </div>
