--- a/public/src/less/publicVariables.less
+++ b/public/src/less/publicVariables.less
@@ -21,3 +21,8 @@
 @ib-head-user-exit-left:            30px;     //注销按钮距离左边的距离
 
 @ib-head-user-fontsize:             16px;     //字体的大小
+
+
+
+// 主页面内容
+@ib-content-backgroundcolor:        #eaeaea;   //主页面的背景颜色
