--- a/views/admin/download.ejs
+++ b/views/admin/download.ejs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -14,7 +13,7 @@
         <% include common/head.ejs%>
         <% include common/sideMenu.ejs%>
         <div class="ib-content">
-            主页
+            应用下载
         </div>
     </body>
 </html>
